# libsoxrate

./: Makefile  Makefile.am  README  README.rst  alloc.c  configure.ac  dft_filter.c  dft_module.h  effects_i_dsp.c  fifo.h  libsoxrate.def  libsoxrate.h  libsoxrate.rc  libsoxrate.sln  libsoxrate.vcxproj  libsoxrate.vcxproj.filters  lsxfft.c  module.h  rate.c  rate_module.h  soxint.h  threaded_module.c  threaded_module.h  version.h
example/: example.vcxproj  example.vcxproj.filters  getopt.h  main.c  main.cpp  soxrate.c
example2/: example2.vcxproj  example2.vcxproj.filters  hilbert.c  main.c
